--- a/signin.html
+++ b/signin.html
@@ -15,7 +15,7 @@
       </nav>
     <h3>Login Form</h3>
 
-    <form action="/storeattendant.html">
+    <form action="storeattendant.html">
       <div class="Loginform">
         <div>
           <label for="uname"><b>Email or Username</b></label>
